# docker-girder

./: Dockerfile  README.md  docker-compose.yml  girder.dev.cfg
plugin/: LICENSE  README.md  pyproject.toml
plugin/girder_plugin/: __init__.py  test_rest.py
